fixed <Container> bug causing large containers to exceed 100% width on small screens

--- a/frontend/ui/src/styles/utilities/components/_container.scss
+++ b/frontend/ui/src/styles/utilities/components/_container.scss
@@ -16,7 +16,7 @@
 
 	@each $bp, $size in variables.$breakpoints {
 		&#{&}--#{$bp} {
-			width: $size;
+			max-width: $size;
 		}
 	}
 }
